# alreg_back

./: README.md  alembic.ini  pyproject.toml  pytest.ini
.alembic/: env.py
.alembic/versions/: 2023-08-06-4ca83fe7d4d3_init.py  3b1ce6acebbd_secondary_relation.py  4bb199b462c9_doctor_image_path_added.py  5f8ebdd22ecf_init.py  68bcda67de3c_database_creation.py  777a1bfdb04e_nullable_doctor_id.py  98e4ff3dbb91_datetime_now.py  ba9e82cec019_shortname.py  be10acbf8f6a_init.py  f1617a825fab_init.py
src/: config.py  database.py  main.py  ttttest.py
src/admin/: auth.py  views.py
src/auth/: auth.py  routes.py  user_manager.py
src/dao/: base.py
src/doctor/: dao.py  model.py  routes.py  schemas.py
src/patient/: model.py  schemas.py
src/user/: dao.py  dependencies.py  model.py  schemas.py
tests/: conftest.py
tests/mock_files/: mock_doctors.json  mock_doctors_patients.json  mock_patients.json  mock_roles.json  mock_users.json
tests/unit_tests/users_tests/: dao_test.py
