[tool.poetry]
name = "alreg-back"
version = "0.1.0"
description = ""
authors = ["Daniil Ellovich <daniilellovich@gmail.com>"]
readme = "README.md"
packages = [{include = "alreg_back"}]
homepage = "localhost:8000"
documentation = "localhost:8000/docs"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.0"}
alembic = "^1.11.2"
asyncpg = "^0.28.0"
isort = "^5.12.0"
black = "^23.7.0"
redis = "^4.6.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
extend_skip = [".md"]
extend_skip_glob = [".alembic"]


[tool.pyright]
include = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.autoflake]
check_diff = true
imports = ["sqlalchemy", "src"] # by default, only standard moduls watched